2002-10-29  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Fixed a bug when drawing primitive 20
	  discovered by jj. Caused slanted (by coordinates) primitives
	  to "slant" in the wrong direction.

2002-10-29  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (redraw_pixmap): Free pixmaps also when
	  preempted, we used to leek pixmaps (bad!).

2002-10-28  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (autoscale): Wrong sign on clip_bbox.x1 from
	  trans_x. Now even nollezappare is centered correctly.

2002-10-27  Stefan Petersen  <spe@>

	* src/draw_amacro.c: Reset the stack pointer after each primitive
	  operation. It's not completly right to do it this way, but since
	  I built the compiler I know how the code generated looks like ;-).
	  Closes bug #629101.

2002-10-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Removed some nested use of strncmp with simple
	  switch/case instead in parse_G_code.
	* src/gerber.c: Added an extra check so RS274D doesn't casue
	  segfault. Discovered by Jukka Marin. Thanks.

2002-10-24  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Played with clipping. Allocated
	  pixmap is now same size as window. GTK does all clipping (we
	  could optimize this somewhat with "object" bounding boxes). This
	  makes it possible to zoom where no gerbv has zoomed before.
	  Some interesting effects can be found by zooming in a lot.

-- Release 0.0.10 debian release 2 --

2002-10-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/drill.c, src/gerb_file.[hc], src/gerber.c, src/gerbv.c:
	  Alot of abuse using EOF(-1) when char actually is unsigned
	  caused a lot of warnings when Debian build system tried to
	  build it for a couple of platforms.

2002-10-14  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Activate millimeters in unit menu if this
	  is the default unit.
	  (update_statusbar()): Check that statusbar has been